# arc-mlir-to-arcon

./: Cargo.toml
src/: arena.rs  closure.rs  lib.rs
src/constructs/: closure.rs
src/operators/: adt.rs  arena.rs  box_to_rc.rs  cache.rs  immutable.rs  slide.rs  template.rs
src/operators/adt/: box_data.rs  box_from_rc.rs  mod.rs  rc_data.rs  rc_from_box.rs
src/operators/python/: handler.py  mod.rs
src/tests/: wordcount.rs
