[package]
name = "arcon-tests"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcon = { git = "https://github.com/cda-group/arcon", version = "0.1.3" }
arcon_error = { git = "https://github.com/cda-group/arcon", version = "0.1.1" }
arcon_state = { git = "https://github.com/cda-group/arcon", version = "0.1.0" }
arcon_macros = { git = "https://github.com/cda-group/arcon", version = "0.1.0" }
kompact = { git = "https://github.com/kompics/kompact.git", branch = "master", features = ["type_erasure"] }
prost = { git = "https://github.com/danburkert/prost.git" }
abomonation_derive = "0.5.0"
abomonation = "0.7.3"
bumpalo = { version = "3.4.0", features = ["collections", "boxed"] }
pyo3 = "0.12.4"
