[package]
name = "arcon-tests"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.arcon]
git = "https://github.com/cda-group/arcon"
version = "0.1.3"

[dependencies.arcon_error]
git = "https://github.com/cda-group/arcon"
version = "0.1.1"

[dependencies.arcon_state]
git = "https://github.com/cda-group/arcon"
version = "0.1.0"

[dependencies.arcon_macros]
git = "https://github.com/cda-group/arcon"
version = "0.1.0"

[dependencies.kompact]
git = "https://github.com/kompics/kompact.git"
branch = "master"
features = ["type_erasure"]

[dependencies.prost]
git = "https://github.com/danburkert/prost.git"

[dependencies.abomonation_derive]
version = "0.5.0"

[dependencies.abomonation]
version = "0.7.3"

[dependencies.bumpalo]
version = "3.4.0"
features = ["collections", "boxed"]

[dependencies.pyo3]
version = "0.12.4"

[dependencies.fnmutant]
version = "0.1.0"

[dependencies.cached]
version = "0.22.0"

[dependencies.rpds]
version = "0.8.0"

[dependencies.im-rc]
version = "15.0.0"
features = ["pool"]

[dependencies.ppar]
version = "0.2.0"
